--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -19,18 +19,6 @@
   height: auto;
 }
 
-.check-list + ul li {
-  list-style-type: none;
-  padding-left: 0;
-  margin-left: 0;
-}
-
-.check-list + ul li:before {
-  content: "✔️";
-  padding-right: 10px;
-  font-size: 12px;
-}
-
 .img-full-width + p img {
   width: 100%;
 }
@@ -54,4 +42,13 @@ blockquote strong {
 
 .small {
   font-size: 14px;
+}
+
+
+.md-typeset [type="checkbox"]:checked + .task-list-indicator::before {
+    background-color: #e600c2;
+}
+
+span.task-list-indicator {
+    margin-right: 5px;
 }
